core/minio/base/operator.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    operator.min.io/authors: MinIO, Inc.
    operator.min.io/license: AGPLv3
    operator.min.io/support: https://subnet.min.io
  labels:
    app.kubernetes.io/instance: minio-operator
    app.kubernetes.io/name: operator
    name: minio-operator
  name: operator
  namespace: minio-operator
spec:
  ports:
  - name: http
    port: 4221
  selector:
    name: minio-operator
    operator: leader
  type: ClusterIP
