core/minio/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenant-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - minio.k8s.integratn.tech
        - console.k8s.integratn.tech
      secretName: tenant-tls
  rules:
    - host: minio.k8s.integratn.tech
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: minio
                port:
                  number: 80
    - host: console.k8s.integratn.tech
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: console
                port:
                  number: 9090
